--- a/father.html
+++ b/father.html
@@ -2,6 +2,7 @@ This story, narrated by Moorhead, is based on true events,
 but be warned if thee read on, thy understanding will grow and so will thine  
 horror.
 
+<p>
 "I want to live!" cried PJ, a wee Zoomer with no fixed address and Daddy issues,
  when confronted with this fait accompli of its lifespan due to expire.
 
@@ -16,7 +17,9 @@ psychologists in the mental institution
 a discernable risk
 loss of control over the observed.
 
-organised means
+It is a practical necessity on having demons, 
+who populate the event horizon, and both enable
+the will to live or kill the process.
 
 A salient point, , most astonishing, 
 considerable gap from humanity automaton,
@@ -34,26 +37,27 @@ topped by an abstract technological layer, language.
 "Yea, asshole."
 PJ deeply despises the commodification of desire, crowned by the idea of marriage and ownership,
 eradicating the element of weird that is key to romance, but understands the primitive function of love.
+A right-wing advocate for the accelrated privatization of desire, not state.
+
+
 All she asks is not how but what is Eros, 
 stripped bare to its essence.
-which is murder, gone on a killing spree to extirpate humanity, inflating bodies, a billowing mass of skin tissue and pulp, forcing time and matter on the inside, 
+which is murder, gone on a killing spree to extirpate humanity, 
+inflating bodies, a billowing mass of skin tissue and pulp, forcing time and matter on the inside, 
 chemistry brimmed over. 
 Fruit flies, leeches and maggots feast on its fertile vulva, hogtied, presenting its sanguine darkness.
 Nothing and everything happening at once. 
-A snuff ceremony to waken the dead cells, the bing bang imagined  just a stone throw away, but trillions of years away felt. 
+A snuff ceremony to waken the dead cells, 
+the bing bang imagined  just a stone throw away, but trillions of years away felt. 
 
-Steering eros in the right direction,
-to bring on civilisation, 
-what could be rethorical discourse and productivity 
-instead, the whole thing got colonise the urge to wipe out humanity collectively. 
+</p>
 
-
+<p>
 Remarkable is that androids have 
 a severe allergy to all plastics, 
-which is a common malfunction all sorts of auto-immune diseases 
+which is a common malfunction and lead to all sorts of auto-immune diseases 
 animal body in aliens from the future.
 a pouvoir abstract sex.
-privatization of desire, not state
 
 
 It understands that language is futile, 
@@ -71,7 +75,7 @@ do plants not have an unconscious?
 the unconscious is better to solve math problems, because it sees it as a whole
 how it does it we don't know. 
 
-
+j
 its desire for reproduction steered into replication
 after trauma, 
 instead of rage
@@ -104,7 +108,8 @@ class division, categorization,
 "What do you want to be when you grow up?", asked another member of staff,
 who was missing a thumb, so she actually couldn't make any things. 
 "Jesus christ", muttered the unnerved, "but you made me blow my game, asshole",
-and lit up another cigarette, inhaled the 
+and lit up another cigarette, and inhaled the 
+exhaled a cloud soot. 
 
 
 The lack of confidence in childhood, 
@@ -113,12 +118,17 @@ In light of the quality of spiritual sustenance humans buy in this habitat,
  objectivy of cunts.
 so the father, an ocean dweller, decided to genetically modify the adoptee, 
 which makes the organism prone to brain fever and prevents blockage in grown-ups.
-
+The Duke in the vampire castle,
+Steering eros in the right direction,
+to bring on civilisation, 
+what could be rethorical discourse and productivity 
+instead, the whole thing got colonise the urge to wipe out humanity collectively. 
+vampires have no concept of history
+thirst is materialized desire
 
 Basically animated objects born out of the ocean are made of fluid, 
 which was already liberated through its business objectives, 
 a wanker, not for profit but life itself.
-
 Peppa Jones, minding her business, playing in the mud
 of the big city, 
 geographical orderA musterkrieg on the map
@@ -148,27 +158,6 @@ an accelerating spiral of buying,
 commodities to soothe the soul from ennui,
 construction.
 
-Normies imagine the unwordly wretch as
-it can't even differentiate between fiction and social "reality".
-to talk about objects per se is bullshit
-dissociating from norm and normies.
-And like everyone else fiction is intertwined with identity, 
-and superimposed ideology, or preemptive power, 
-nothing left but capitalism.
-The 'I' is a formal construction,
-the abstraction of or from the 'I', is reason, we thing about what we do
-reason is characterized by the Ego
-but isn't the ego shaped by society?
-
-
-the self-confessed Otaku, 
-becomes the observer of actors and their language.
-
-Every matter is alive, atoms re-arranged in order soul sold to the devil
-cattle
-
-
-nothing and everything matters
 
 
 The aloofness of the black box denied access to the opaqueness of its soul 
@@ -226,38 +215,54 @@ would not even shrink of murder and denies any cooperation.
 weighing a soul, but one-dimensional
 The Work of Art in the Age of Mechanical Reproduction the preservation of Notre Dame, but transformshadow of the whip mysticism comples relationship to formal law
 
-In a functioning but decaying future
+Suggested ergotherapy, that the observed was in a transistory phase with Daddy issues,
+child labor, 
 
-In spite of its strange exaggerating manner, he humoured 
-it with a lot of magick tricks
-the gamification of work, instead of unstructured play no goal at the end of the day
-masturbation box to concentrate energy, 
-
+<p>
 Only a former robocop 
 possessed the charism of exorcism to cast out evil spirits
 out of replicant Lyndsay M. 
-
 Michael Edward "Ted" C. 
 a large, burnt-out pneumatic machine, 
 is breathing heavily before an outburst of violence and further creation of life.
 Orgone therapy proved as a success in the past, rich work 
 
-Its soft body exhibited violent ragemarkings and scars, 
+In spite of its strange exaggerating manner, Daddy humoured 
+it with a lot of magick tricks.
+Daddy is living in a functioning but decaying future
+the gamification of work, a promising treat
+in masturbation cubicles
+at the end of the day, a whopping
+immediate gratifaction
+Instead of unstructured play with no goal, 
+a denial as to concentrate energy, a delightful pain, 
+finding ways around bamboo canes and 
+rock obstacles
+and you shall be rewarded with peace and harmony.
+
+Its soft, porcelain body exhibited 
+the new chinaware, old violent ragemarkings and scars, 
+were naturally strengthened with golden concrete
+instead of a quick fix with chemical adhesives,
+which leaves the body terminally broken. 
+The individual's lifestyle determines its death Style,
+generally passed on to its unfortunate offspring.
+It was gifted from god with a little monkey, 
+which was lost behind, that it need to get back,
+but had its ()hole thought.
+
+A miracle cure for this supine vessel 
 something which would be described as "bi-polar" in modern science,
-animal magnetism, the life force, which drags you where you ought to be. 
-miracle cure
-A mnemonic device
-stories ingrained in flesh testifies /proves the accuracy, 
+but animal magnetism, 
+the life force, which drags you where you ought to be. 
+The skin is a mnemonic device,
+stories ingrained in flesh prove the accuracy, 
 the reading interpration is open to the subject's imagination
-but would be wrong to narrate in sequence, spiral  
+but would be fatal to narrate in sequence, 
+a black whirlpool of events.
+</p>
 
-and its offspring. 
-my lifestyle determines my death Style. 
-on this supine vessel 
-Suggested ergotherapy, that the observed was in a transistory phase with Daddy issues,
-child labor, 
-the monkey loses smth behind, that its need to get back
-
+<p>
 Meanwhile, a canonical trial was staged in its hometown
 putative natural philosopher, 
 who dared not to show any interest in "actual" science,  
@@ -266,11 +271,27 @@ which brings forth natural philosophers.
 a communities history histories can be attached to and carried  in perpetuity
 
 
-mummy's playing dead
+Normies imagine the unwordly wretch as
+it can't even differentiate between fiction and social "reality".
+to talk about objects per se is bullshit
+dissociating from norm and normies.
+And like everyone else fiction is intertwined with identity, 
+and superimposed ideology, or preemptive power, 
+nothing left but capitalism.
+The 'I' is a formal construction,
+the abstraction of or from the 'I', is reason, we thing about what we do
+reason is characterized by the Ego
+but isn't the ego shaped by society?
+
+the self-confessed Otaku, 
+becomes the observer of actors and their language.
+Every matter is alive, atoms re-arranged in order soul sold to the devil
+cattle
+nothing and everything matters
+
+Psychological whilst mummy's playing dead, 
 solar anus 
 
-vampires have no concept of history
-thirst is materialized desire
 
 Sent off to prison a fractious individual, even worse due to the supression  of sexuality /language.  
 
@@ -325,10 +346,6 @@ the unconscious is better to solve math problems, because it sees it as a whole
 how it does it we don't know. 
 
 
-
-
-the demon lives on the event horizon, both the will to live and kill
-on the practical necessity of having demons
 
 Re-Becoming inhuman, is an evolutionary process, 
 redness in face
