--- a/kubany.html
+++ b/kubany.html
@@ -23,7 +23,7 @@ Miss Bryant is the opposite hypertextual controlled
 link up. The best we can have is pulp, if I choke put my foot on the throttle
 set the engine on fire, smoke pollutes the skies and falls down as black icicles
 Miss Bryant is at the centre though, not the edge
---She's perfect
+--She's perfect for the mission.
 
 We were eager to leave the territory of conflict, 
 and the ,for my taste, too cold and flat continental surfaces, 
@@ -179,8 +179,6 @@ knowledge is the spirit, it is the unknown
 in contrast /relation to phenomenon (object of the senses, but isn't that subjective???)
 
 
-atavism=reappearance of genetic old features, Moorhead is the werewolf-rat, Erin is her past
-animality is the undercurrent of modernity and reality
 
 The antonym of matter is the unknown. 
 this is a transaction, a super-heated lubricant of global becoming
@@ -264,7 +262,7 @@ Despite halt of economic growth,
 I found a shining example of hyperaccelerationism
 Everything was about control, the residents, including the newly arrived immigrants,who were lured into it, truly believed in it, how out of control it really was. 
 
-
+in my pontoon
 An unpleasant MI5SON, easy for bellends 
 bureau from the security service, who are into domestic counter-intelligence. 
 Like Matthew Fox, known as K, co-founder and my best fiend
@@ -329,14 +327,54 @@ I sent K a letter invisible ink.
 -----------------------------
 
 <p>
-atavism=reappearance of genetic old features, Moorhead is the werewolf-rat, Erin is her past
-animality is the undercurrent of modernity and reality
 
 
 On orders from above, 
 moving through the most impassable jungle area,
 I was greeted by many surprises, some shockingly awful, some delightful.
 the former must be destroyed. 
+
+An avalanche backwards to the past,
+atavism=reappearance of genetic old features
+Moorhead is the werewolf-rat, Erin is her past
+animality is the undercurrent of modernity and reality
+conditions like the triassic period
+adapt for survival in the new environment
+Lamarckism, strong liver from drinking, so son inherits also strong liver
+
+Most biological memories are unpleasant, the ones echoes of danger and
+terror, nothing endures so long in the flesh like FEAR, 
+ADHS, red face
+the mind /consciousness dreams of good times, nostalgia, a state
+we call the waking life.
+but what about the dreams we are not aware of /remember
+
+
+A severe insomnia, for weeks or months , I can't recall, 
+as I totally lost the sensation of time
+not tired but animated, driven by an hithero unknown inner force, 
+I was gifted a horse for my examinations, 
+by the britsh /canadian forces.  
+, although oncerned what will do this to my brain structure, 
+might die happy
+systemctl start, 
+experiment with electric fire, record player, alarm clocks, paraloid mirror,
+aural rohrschach test, a sonic sculpture, what images do sound create
+sadness, cheer, power,
+actually better than visual, vibrating the flesh, more direct
+(36/37), 
+
+
+Empirical approach, observing with the senses, 
+the techno-logical extensions, is all we can do, global village.
+
+The biologist Bodkin (p. 38/The drowned world), that consciousness is nothing more than a special category of cytoplasmic coma that the nervous system developed
+appearance of dinos, huge lizards so humans would revert back to apes?
+
+
+
+
+
 So I came across this poor monkey covered in dust, 
 as soon we made contact with his big brown eyes, his shy little smile at the realisation that he is alive 
 that would melt the stoniest of hearts and minds!
@@ -347,11 +385,9 @@ a remnant from the past
 I felt so bad for the poor thing, I've started to nurture for him and let him rest on my wide chest. On that evening I've noticed a strange weather phenomenon, the sky turned orange, knowing he sent me an immesurable amount dust particles. 
 
 
-
-
 The General in China whispered on the wireless
 that the ape is an Arian Nazi and must be decapitated.
-And why shouldn't I have been fooled by his appearance?
+And why shouldn't I have been fooled by his cute appearance?
 Fleet Street tabloids picture him as a inane, clumsy Gorilla
 blanking out the danger that comes with the true nature of that brute inhumane beasts,
 On afterthought, what would have been the consequences, to attack him. 
@@ -359,11 +395,11 @@ A trap that was set up by the jealous General,
 who knows my sweet-tempered nature too well, instead of killing I've locked him in the basement for a couple of days. 
 Until the phase of hysteria was over, and came to my senses.
 We became loyal companions since ever, clothing him bespoke London couture, 
+gay Clothing protection from having sex. 
 wandering through the forest, sleeping beside me and sentinelling my camp, when I go on short excursions.
 Love, that made me to build solid Wolfsgrub, instead of dwelling in that transitory French military tent.
 In that platonic cave, drunk with love, 
 my feelings toward, the most beautiful and pure creature.
-Clothing protection from having sex. 
  
 
 Their horsemen ride one behind the other, not next to each other.
@@ -377,14 +413,12 @@ in the cold, trap, maladapt.
 adaption to change=survival. 
 trolley problem.
 
-
-------------------------------------------------------
-
 Pneuma is not accessible to humans and has been made into a quasi-substance (solid), a representative, 
 that is attached to regions of existance, like the jet of a black hole. 
 
 The expedition together with Erin Bryant, a pundit,
-because of her extensive academic background, or maybe because she just fucked around. 
+because of her extensive academic background, 
+or maybe because she just fucked around. 
 Hapless visitors as we were, 
 
 
@@ -398,9 +432,6 @@ animal magnetism, has been buried with language, interweaved with the flesh.
 The soul is the hole, the body the solid. 
 Modernity made spirit the primary instrument, which is needed to pneuma and body are blind to each other, a relation to introduce them politely to each other, but has been the prime divider, and trying to keep them apart. 
 Not able to put into words, so I've took action. 
-
-
-
 
 </p>
 
@@ -876,9 +907,24 @@ whirling dust, clusters of vortexes.
 
 </p>
 intelligence explosion, at a speed of milisecond, singularity,
-human extinct. 
+human extinct, the opening pandora's box
+unpredictable, deliberate confusion?, true and false at the same time,
+quantum reality, a new and different tyranny of the matrix. 
+where each brain dances and floats like a compass needle, 
+individual taxonomy of the brain
+not just aligned to North, 
 where speed and intelligence go to infinity
 and destroys The Future of Life Institute. 
+gas discharge speed eplosion (8km /s) (33)
+faster than the speed of sound
+death not perceivable by human flesh. 
+
+Betonung (solid) and gaps in language, 
+a tired silence, coz ()hole
+brain flickers, on /off simultaneously
+
+
+
 
 The future passed unnoticed, 
 integrated in the loup.
