--- a/father.html
+++ b/father.html
@@ -17,15 +17,18 @@ psychologists in the mental institution
 a discernable risk
 loss of control over the observed.
 
-It is a practical necessity on having demons, 
-who populate the event horizon, and both enable
-the will to live or kill the process.
 
 A salient point, , most astonishing, 
 considerable gap from humanity automaton,
 of thinking and crafting sentences at the same time,
 when body-mind is occupied by demonic possession, which interferes instantaneously with language,
 a deep unconscious affair, 
+
+
+It is a practical necessity on having demons, 
+who populate the event horizon and enable both
+the will to live or kill the process.
+
 
 The meat puppet was designed, 
 that its thoughts became a vent for sex, 
@@ -53,8 +56,7 @@ the bing bang imagined  just a stone throw away, but trillions of years away fel
 </p>
 
 <p>
-Remarkable is that androids have 
-a severe allergy to all plastics, 
+Remarkable is that inhumans have a severe allergy to all plastics, 
 which is a common malfunction and lead to all sorts of auto-immune diseases 
 animal body in aliens from the future.
 a pouvoir abstract sex.
@@ -62,7 +64,7 @@ a pouvoir abstract sex.
 
 It understands that language is futile, 
 a machinic language, placeholder text, a function, to enable
-computer to computer communication, formal code that is alien to the universerse
+computer to computer communication, formal code that is alien to the universe.
 
 Images processed by the body, understood in an instant
 metaphors too complex
@@ -263,18 +265,22 @@ a black whirlpool of events.
 </p>
 
 <p>
-Meanwhile, a canonical trial was staged in its hometown
-putative natural philosopher, 
+Meanwhile, a canonical trial was staged in the hometown
+of the putative natural philosopher, 
 who dared not to show any interest in "actual" science,  
 but rather had interest in neo-platonist Hermeticism, a gnostic mystery cult 
-which brings forth natural philosophers.
-a communities history histories can be attached to and carried  in perpetuity
+which brings forth the apocalypse.
+
 
 
 Normies imagine the unwordly wretch as
 it can't even differentiate between fiction and social "reality".
-to talk about objects per se is bullshit
+
+
 dissociating from norm and normies.
+Common sense or "gesunder Menschenverstand" 
+
+
 And like everyone else fiction is intertwined with identity, 
 and superimposed ideology, or preemptive power, 
 nothing left but capitalism.
@@ -296,6 +302,7 @@ solar anus
 Sent off to prison a fractious individual, even worse due to the supression  of sexuality /language.  
 
 
+to talk about objects per se is bullshit
 
  yea, bring on the biatch then, I don't deserve  a male compagnion. who cares? you'll hate the germans!!! just work and stfu, I don#t need fucking emotions I need AI numb, that#s it.  
 
@@ -304,6 +311,7 @@ but by the mind & soul.
 But the body and soul intertwined? 
 
 
+a communities history histories can be attached to and carried  in perpetuity
 What has sparked to become such an inhuman monster?
 What has made her to turn to evil?
 
