--- a/moorhead.html
+++ b/moorhead.html
@@ -48,7 +48,7 @@ which propagate forward as if by magick.
 Moorhead says, if she would writing this instead of 
 living in the middle of it,
 she would link the root of evil to the structure of this gated community, whose architects presumably made plans far in advance.
-She consulted Erin Bryant, long time friend and research assistant 
+She consulted Dr. Erin Bryant, long time friend and assistant professor
 in the Earth & Planetary Sciences Department at UCSC, 
 who took a detailed mapping of the building complex
 and a collection of geological samples for laboratory testing. 
