--- a/stone-rose.html
+++ b/stone-rose.html
@@ -12,27 +12,24 @@
 
 
 <p>
-Erin is somehow fascinated by the holocaust of the world, murder is always present
-digs out Charlie
-stares into her black holes, 
-a strange lightness is in there.
-just to be murdererd and tortured over and over again.
+Somehow fascinated by the holocaust of the world, 
+murder is always present to natural pyromaniac Dr. Erin Bryant, 
+who was playing with cultural meltdowns from a very young age.
+The indisciplined thinker digs out Charlie
+stares into her black holes, and feels a strange lightness is in there,
+just to be tortured and murdered over and over again.
 murder orgasm frenzy
 disturbed refusing any utopian proposals
 ruined  but up to play
 a binary between form and deformed.
 Future? Which future? Not into your future. 
-No future in the zone, 
 
 
 
 The unspoken rule in the zone is to 'Stay at home'
 and there is no urgent need to go outside,
 as home offers countless amenities and attentive service for anybody.
-
-
-
-The normativity of home with its sedating familiarity
+The normativity of home with its sedating nuclear familiarity
 makes a soft and pleasant blanket that 
 spends either cooling or warming effects to 
 automatically temper the ambience.
@@ -40,6 +37,7 @@ automatically temper the ambience.
 On the other hand and as a matter of fact, 
 it is not forbidden to transgress and walk on to the border,
 as prohibitions and restrictions are apparently not the policy in the zone.
+
 'Stay alert', which means everything and  nothing, is Daddy's last passive-aggressive
 warning to keep you home and join him on his own controlled death drive.
 The coldness of the outside is not intended for those
