transfer to new workstation

--- a/stone-rose.html
+++ b/stone-rose.html
@@ -11,6 +11,10 @@
 <div class="container">
 
 
+blindness new drug
+heightens, disturbs other senses
+Sound no boundary, still feeling more inside
+
 <p>
 Somehow fascinated by the holocaust of the world, 
 murder is always present to natural pyromaniac Dr. Erin Bryant, 
