--- a/father.html
+++ b/father.html
@@ -17,6 +17,7 @@ psychologists in the mental institution
 a discernable risk
 loss of control over the observed.
 
+ungovernable fury, perfectly worthless
 
 A salient point, , most astonishing, 
 considerable gap from humanity automaton,
