--- a/kubany.html
+++ b/kubany.html
@@ -256,22 +256,28 @@ which had to do with the inexplicable missing of astronauts.
 Here I should perform under the motto of the secret intelligence service  
 Semper Occultus. 
 
-But what I found there in the sand, a former forrest, 
-destroyed by acid rain, was beyond any comprehension.
-Despite halt of economic growth, 
-I found a shining example of hyperaccelerationism
-Everything was about control, the residents, including the newly arrived immigrants,who were lured into it, truly believed in it, how out of control it really was. 
+But what I found there in the sand, 
+in former times a Forest Sauvage, which goT DESTROYed by acid rain, 
+was beyond any comprehension.
 
-in my pontoon
+Despite the halt of economic growth, 
+both to my great delight and deep sorrow, I found a shining example of hyperaccelerationism.
+Everything was about control, social relation, 
+life itself
+The residents, including less suspicious, newly arrived immigrants,
+who were lured into this safety net and truly believed in it. 
+Unaware of how out of control everything really was. 
+
 An unpleasant MI5SON, easy for bellends 
 bureau from the security service, who are into domestic counter-intelligence. 
-Like Matthew Fox, known as K, co-founder and my best fiend
-in this intelligence machinery. 
+
+Like Matthew Fox, known as K, co-founder and my best fiend, in this intelligence machinery. 
 unavoidable experiments, went into combat
 "thought-experiments" not from armchair but the battlefield.
-communication between materialists and vitalists
-problematic, 
+
+communication between materialists and vitalists extremists problematic, 
 the common ground is the brain, that has been shattered. 
+
 idea of spiritual appearance which was casted in the fascist realm?soul
 materialsts hardened
 
@@ -286,7 +292,8 @@ placed on the retired list as "unfit for service"
 due to spacesickness. 
 The ocean, I mingled with the RAF. 
 And this is not due to the spinning of the earthcore
-but with abstract chemosensitivity, yes, I am allergic to all plastic and the organised surface of reality, excavated and dried out in the sun subculture.
+but with abstract chemosensitivity, yes, I am allergic to all plastic 
+and the organised surface of reality, excavated and dried out in the sun subculture.
 The matrix, weaved together by a grande narrative, based on dualism of black and white, the sky is gray. 
 
 This military strategy forced my retreat into the Outside, 
@@ -303,6 +310,9 @@ Partly, I share it with my indiginous ancestors, who lived on this land
 for many generations. witch mother, a stamp of strangeness
 émigré community.
 Race, gender, sexuality, don't matter anymore, it's class. 
+
+
+well provided for the morrow, looking forward with glee
 
 
 I am classified as genetic trash even though I posess natural
@@ -322,7 +332,7 @@ even though I'm much more qualified than those hoes.
 I've lost an eye, stabbed it
 with fountain pen. 
 Also I adopted the motto "Every man his own stylo", 
-I sent K a letter invisible ink. 
+so I sent K a letter invisible ink. 
 </p>
 -----------------------------
 
